finalgit add .git add .

--- a/_layouts/memory.html
+++ b/_layouts/memory.html
@@ -16,14 +16,12 @@
     <div class = "pic"><img src = "../assets/image/pic1.JPG"><span class = "dec">1</span></div>
     <div class = "pic"><img src = "../assets/image/pic2.JPG"><span class = "dec">1</span></div>
     <div class = "pic"><img src = "../assets/image/pic3.JPG"><span class = "dec">1</span></div>
-<div class = "pic"><img src = "../assets/image/pic9.JPG"><span class = "dec">1</span></div>
-<div class = "pic"><img src = "../assets/image/pic4.JPG"><span class = "dec">1</span></div>
-<div class = "pic"><img src = "../assets/image/pic5.JPG"><span class = "dec">1</span></div>
-<div class = "pic"><img src = "../assets/image/pic6.JPG"><span class = "dec">1</span></div>
-<div class = "pic"><img src = "../assets/image/pic7.JPG"><span class = "dec">1</span></div>
-<div class = "pic"><img src = "../assets/image/pic8.JPG"><span class = "dec">1</span></div>
-
-<div class = "pic"><img src = "../assets/image/pic3.JPG"><span class = "dec">1</span></div>
+<div class = "pic"><img src = "../assets/image/pic9.jpg"><span class = "dec">1</span></div>
+<div class = "pic"><img src = "../assets/image/pic4.jpg"><span class = "dec">1</span></div>
+<div class = "pic"><img src = "../assets/image/pic5.jpg"><span class = "dec">1</span></div>
+<div class = "pic"><img src = "../assets/image/pic6.jpg"><span class = "dec">1</span></div>
+<div class = "pic"><img src = "../assets/image/pic7.jpg"><span class = "dec">1</span></div>
+<div class = "pic"><img src = "../assets/image/pic8.jpg"><span class = "dec">1</span></div>
     <div id = "nav">
     <span class = "font"><a href = "../index.html">Ç</a></span>
 	<span class = "font"><a href = "../wish.html">9</a></span>
